@startuml

title __ACTIVITYMANAGER's Class Diagram__\n

  namespace com.itbird.design {
    namespace singleton.activitymanager {
      class com.itbird.design.singleton.activitymanager.ActivityManager {
          {static} - stack : Stack<Activity>
          + addActivity()
          + clearAllStack()
          + finishActivity()
          + finishActivity()
          {static} + getInstance()
          + getTopActivity()
          - ActivityManager()
      }
    }
  }
  

  namespace com.itbird.design {
    namespace singleton.activitymanager {
      class com.itbird.design.singleton.activitymanager.ActivityManager.ActivityManagerHolder {
          {static} - activityManager : ActivityManager
      }
    }
  }
  

  namespace com.itbird.design {
    namespace singleton.activitymanager {
      abstract class com.itbird.design.singleton.activitymanager.BaseActivity {
          # onCreate()
          # onDestroy()
          {abstract} ~ getLayout()
          {abstract} ~ init()
      }
    }
  }
  

  namespace com.itbird.design {
    namespace singleton.activitymanager {
      class com.itbird.design.singleton.activitymanager.LoginActivity {
          ~ button : Button
          ~ textView : TextView
          ~ getLayout()
          ~ init()
      }
    }
  }
  

  namespace com.itbird.design {
    namespace singleton.activitymanager {
      class com.itbird.design.singleton.activitymanager.RegisterActivity {
          ~ button : Button
          ~ textView : TextView
          ~ getLayout()
          ~ init()
      }
    }
  }
  

  namespace com.itbird.design {
    namespace singleton.activitymanager {
      class com.itbird.design.singleton.activitymanager.SingletonActivity {
          ~ button : Button
          ~ textView : TextView
          ~ getLayout()
          ~ init()
      }
    }
  }
  

  com.itbird.design.singleton.activitymanager.ActivityManager +-down- com.itbird.design.singleton.activitymanager.ActivityManager.ActivityManagerHolder
  com.itbird.design.singleton.activitymanager.BaseActivity -up-|> android.app.Activity
  com.itbird.design.singleton.activitymanager.LoginActivity -up-|> com.itbird.design.singleton.activitymanager.BaseActivity
  com.itbird.design.singleton.activitymanager.RegisterActivity -up-|> com.itbird.design.singleton.activitymanager.BaseActivity
  com.itbird.design.singleton.activitymanager.SingletonActivity -up-|> com.itbird.design.singleton.activitymanager.BaseActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
